--- a/packages/extension/tsconfig.json
+++ b/packages/extension/tsconfig.json
@@ -8,7 +8,10 @@
         "lib": [
             "ES2022"
         ],
-        "sourceMap": true
+        "sourceMap": true,
+        "declaration": false,
+        "declarationMap": false,
+        "composite": false
     },
     "references": [
         {
