--- a/packages/extension/.vscodeignore
+++ b/packages/extension/.vscodeignore
@@ -1,5 +1,12 @@
 # Parent directories (critical - prevent including workspace root)
 ../../
+../
+
+# Exclude shared package (bundled into dist/extension.js by esbuild)
+../shared/
+../shared/**
+**/shared/
+**/shared/**
 
 # Exclude entire MCP package (we copy mcp/dist/server.js locally before packaging)
 ../mcp/**
@@ -8,10 +15,15 @@
 src/
 tsconfig.json
 tsconfig.tsbuildinfo
+**/tsconfig.tsbuildinfo
+*.tsbuildinfo
+../shared/tsconfig.tsbuildinfo
+extension/../shared/tsconfig.tsbuildinfo
 
 # Node modules (bundled into dist/extension.js by esbuild)
 # MCP dependencies are bundled into mcp/dist/server.js (copied from ../mcp/)
 node_modules/
+**/node_modules/
 
 # Test files
 **/__tests__/
