chore: update version to 1.0.0 and add build step for shared package

--- a/.github/workflows/release-extension.yml
+++ b/.github/workflows/release-extension.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
       
+      - name: Build shared package
+        run: npm run build --workspace=packages/shared
+      
       - name: Run all tests
         run: |
           npm run test:coverage --workspace=packages/mcp
