chore: bump versions to 1.0.4 (extension) and 2.0.4 (mcp) - fix CLI version display

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ out/
 *.vsix
 *.tsbuildinfo
 
+# Auto-generated files
+packages/mcp/src/version.ts
+
 # Copied MCP bundle (created during extension packaging, not committed)
 packages/extension/mcp/
 
