fix: generate version.ts before running tests

--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -16,6 +16,7 @@
         "dev": "tsc --build --watch",
         "compile": "tsc --noEmit",
         "start": "node dist/server.js",
+        "pretest": "node scripts/generate-version.js",
         "test": "jest",
         "test:coverage": "jest --coverage",
         "test:watch": "jest --watch",
