feat: graceful MCP startup with client-agnostic error handling
- MCP server now starts successfully even without BC Telemetry Buddy configuration
- Configuration validation moved from startup to runtime
- Error messages provide guidance for VSCode, Claude Desktop, and other MCP clients
- Missing BCTB_WORKSPACE_PATH uses process.cwd() fallback instead of failing
- Added comprehensive documentation for standalone MCP client usage

fix: shared package integration for extension tests

- Built @bctb/shared package to generate dist files
- Configured Jest moduleNameMapper to resolve @bctb/shared
- Added TypeScript paths mapping for @bctb/shared
- Fixed symlink test to use module resolution
- All 350 tests now passing (212 extension + 138 MCP)

Test Results:
- Extension: 212/212 tests passing (was 181/192)
- MCP: 138/138 tests passing
- Coverage: MCP 94.39%, Extension 74.02%

Resolves shared package integration issues and improves test coverage

--- a/packages/extension/tsconfig.json
+++ b/packages/extension/tsconfig.json
@@ -11,7 +11,15 @@
         "sourceMap": true,
         "declaration": false,
         "declarationMap": false,
-        "composite": false
+        "composite": false,
+        "paths": {
+            "@bctb/shared": [
+                "../shared/src/index.ts"
+            ],
+            "@bctb/shared/*": [
+                "../shared/src/*"
+            ]
+        }
     },
     "references": [
         {
