feat: add automatic MCP update checking and notifications
- Implemented automatic MCP update checks every 24 hours in the extension.
- Added user notifications for available updates with options to update or view changes.
- Introduced manual command for checking MCP updates from the Command Palette.
- Enhanced MCP server to check for updates on startup and log notifications.
- Updated documentation to reflect new features and usage instructions.

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -118,6 +118,11 @@
             {
                 "command": "bctb.showReleaseNotes",
                 "title": "BC Telemetry Buddy: What's New"
+            },
+            {
+                "command": "bctb.checkForMCPUpdates",
+                "title": "BC Telemetry Buddy: Check for MCP Updates",
+                "icon": "$(cloud-download)"
             }
         ],
         "configuration": {
