--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,6 +69,17 @@ jobs:
       - name: Install dependencies
         run: npm ci
       
+      - name: Generate telemetry config (dev mode - no connection string)
+        run: |
+          mkdir -p packages/shared/src
+          cat > packages/shared/src/telemetryConfig.generated.ts << 'EOF'
+          /**
+           * GENERATED FILE - DO NOT EDIT MANUALLY
+           * CI Build - Development mode (no telemetry)
+           */
+          export const TELEMETRY_CONNECTION_STRING = '';
+          EOF
+      
       - name: Build MCP (required by extension)
         run: npm run build --workspace=packages/mcp
       
