--- a/.github/workflows/release-extension.yml
+++ b/.github/workflows/release-extension.yml
@@ -32,6 +32,19 @@ jobs:
       - name: Install dependencies
         run: npm ci
       
+      - name: Generate telemetry config with AI connection string
+        run: |
+          mkdir -p packages/shared/src
+          cat > packages/shared/src/telemetryConfig.generated.ts << 'EOF'
+          /**
+           * GENERATED FILE - DO NOT EDIT MANUALLY
+           * Production build - Azure Application Insights enabled
+           */
+          export const TELEMETRY_CONNECTION_STRING = '${{ secrets.AI_CONNECTION_STRING }}';
+          EOF
+        env:
+          AI_CONNECTION_STRING: ${{ secrets.AI_CONNECTION_STRING }}
+      
       - name: Build shared package
         run: npm run build --workspace=packages/shared
       
@@ -200,6 +213,19 @@ jobs:
       
       - name: Install dependencies
         run: npm ci
+      
+      - name: Generate telemetry config with AI connection string
+        run: |
+          mkdir -p packages/shared/src
+          cat > packages/shared/src/telemetryConfig.generated.ts << 'EOF'
+          /**
+           * GENERATED FILE - DO NOT EDIT MANUALLY
+           * Production build - Azure Application Insights enabled
+           */
+          export const TELEMETRY_CONNECTION_STRING = '${{ secrets.AI_CONNECTION_STRING }}';
+          EOF
+        env:
+          AI_CONNECTION_STRING: ${{ secrets.AI_CONNECTION_STRING }}
       
       - name: Download artifacts
         uses: actions/download-artifact@v4
