--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -23,6 +23,7 @@
         "clean": "rimraf dist"
     },
     "dependencies": {
+        "applicationinsights": "^3.12.0",
         "commander": "^12.0.0",
         "express": "^4.18.2"
     },
