fix: generate telemetry config in all CI jobs before build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,17 @@ jobs:
       - name: Install dependencies
         run: npm ci
       
+      - name: Generate telemetry config (dev mode - no connection string)
+        run: |
+          mkdir -p packages/shared/src
+          cat > packages/shared/src/telemetryConfig.generated.ts << 'EOF'
+          /**
+           * GENERATED FILE - DO NOT EDIT MANUALLY
+           * CI Build - Development mode (no telemetry)
+           */
+          export const TELEMETRY_CONNECTION_STRING = '';
+          EOF
+      
       - name: Build MCP
         run: npm run build --workspace=packages/mcp
       
@@ -127,6 +138,17 @@ jobs:
       - name: Install dependencies
         run: npm ci
       
+      - name: Generate telemetry config (dev mode - no connection string)
+        run: |
+          mkdir -p packages/shared/src
+          cat > packages/shared/src/telemetryConfig.generated.ts << 'EOF'
+          /**
+           * GENERATED FILE - DO NOT EDIT MANUALLY
+           * CI Build - Development mode (no telemetry)
+           */
+          export const TELEMETRY_CONNECTION_STRING = '';
+          EOF
+      
       - name: Check TypeScript compilation (MCP must build first)
         run: |
           npm run build --workspace=packages/mcp
@@ -161,6 +183,17 @@ jobs:
       
       - name: Install dependencies
         run: npm ci
+      
+      - name: Generate telemetry config (dev mode - no connection string)
+        run: |
+          mkdir -p packages/shared/src
+          cat > packages/shared/src/telemetryConfig.generated.ts << 'EOF'
+          /**
+           * GENERATED FILE - DO NOT EDIT MANUALLY
+           * CI Build - Development mode (no telemetry)
+           */
+          export const TELEMETRY_CONNECTION_STRING = '';
+          EOF
       
       - name: Build MCP
         run: npm run build --workspace=packages/mcp
