feat: implement usage telemetry with Application Insights integration… (#62)
* feat: implement usage telemetry with Application Insights integration (#61)

Implements anonymous usage telemetry to track extension/MCP usage and improve product quality.

**Features:**
- Track extension lifecycle, command usage, feature adoption, errors, and performance
- Application Insights integration via @microsoft/applicationinsights-web (extension) and applicationinsights (MCP)
- Respects VS Code telemetry.telemetryLevel setting (off/error/crash/all)
- Rate limiting to prevent runaway costs (100 events/min, 1000/session)
- Comprehensive PII sanitization (paths, emails, IPs, GUIDs, credentials)
- Anonymous with hashed session IDs

**Privacy:**
- Opt-out via VS Code setting: telemetry.telemetryLevel = off
- No collection of queries, results, customer data, or credentials
- Clear disclosure in README and UserGuide
- GDPR-compliant with pseudonymous data only

**CI/CD Integration:**
- CI builds: empty connection string (no telemetry during tests)
- Release builds: inject AI_CONNECTION_STRING from GitHub secret
- Hardcoded in shipped binaries, not stored in repository

**Implementation:**
- packages/shared/src/usageTelemetry.ts: Core telemetry interfaces (IUsageTelemetry, NoOp, RateLimited)
- packages/shared/src/telemetryEvents.ts: Event ID constants and utilities
- packages/shared/src/usageTelemetryUtils.ts: Sanitization and hashing utilities
- packages/extension/src/services/extensionTelemetry.ts: VSCode-specific telemetry client
- packages/mcp/src/mcpTelemetry.ts: MCP server telemetry implementation
- extension.ts: Integration with command tracking and error handling

**Tests:**
- 87% coverage on shared package (usageTelemetry, telemetryEvents, utils)
- 80.3% coverage on extension (extensionTelemetry integration)
- All 658 tests passing

**Documentation:**
- Updated README.md with telemetry disclosure
- Updated UserGuide.md with privacy section
- Updated all component CHANGELOGs
- C

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
       
+      - name: Generate telemetry config (dev mode - no connection string)
+        run: node scripts/generate-telemetry-config-ci.js
+      
       - name: Build MCP
         run: npm run build --workspace=packages/mcp
       
@@ -68,6 +71,9 @@ jobs:
       
       - name: Install dependencies
         run: npm ci
+      
+      - name: Generate telemetry config (dev mode - no connection string)
+        run: node scripts/generate-telemetry-config-ci.js
       
       - name: Build MCP (required by extension)
         run: npm run build --workspace=packages/mcp
@@ -116,6 +122,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
       
+      - name: Generate telemetry config (dev mode - no connection string)
+        run: node scripts/generate-telemetry-config-ci.js
+      
       - name: Check TypeScript compilation (MCP must build first)
         run: |
           npm run build --workspace=packages/mcp
@@ -150,6 +159,9 @@ jobs:
       
       - name: Install dependencies
         run: npm ci
+      
+      - name: Generate telemetry config (dev mode - no connection string)
+        run: node scripts/generate-telemetry-config-ci.js
       
       - name: Build MCP
         run: npm run build --workspace=packages/mcp
