fix(ci): add telemetry config generation to NPM publish job
- The 'Publish to NPM' job also needs to generate telemetry config
- Both build-and-test and publish-npm jobs now generate config before building

--- a/.github/workflows/release-mcp.yml
+++ b/.github/workflows/release-mcp.yml
@@ -164,6 +164,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
       
+      - name: Generate telemetry config
+        run: node scripts/generate-telemetry-config-ci.js
+        env:
+          AI_CONNECTION_STRING: ${{ secrets.AI_CONNECTION_STRING }}
+      
       - name: Build shared package
         run: npm run build --workspace=packages/shared
       
