UsageTelemetryAnalysis: Add comprehensive documentation and KQL templates for analyzing usage telemetry
- Created README.md with detailed instructions on usage telemetry analysis for BC Telemetry Buddy, highlighting differences from BC telemetry.
- Added KQL templates for various analysis scenarios including event discovery, user activity, feature usage, error analysis, performance metrics, session analysis, and version tracking.
- Introduced customEvents.kql and customMetrics.kql for querying usage telemetry data.
- Documented common query patterns and pitfalls to avoid in the analysis process.
- Updated DesignWalkthrough.md and PromptLog.md to reflect the new usage telemetry analysis features and instructions.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,7 +51,8 @@
     "kusto.validationEnabled": false,
     // NPM
     "npm.packageManager": "npm",
-    "npm.enableRunFromFolder": true
+    "npm.enableRunFromFolder": true,
+    "editor.codeLens": true
     // BC Telemetry Buddy - Test Configuration
     // ⚠️ DISABLED in development workspace to prevent auto-activation
     // Use F5 to debug the extension instead
