--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,7 +52,9 @@
     // NPM
     "npm.packageManager": "npm",
     "npm.enableRunFromFolder": true,
-    "editor.codeLens": true
+    "editor.codeLens": true,
+    // BC Telemetry Buddy MCP - Development Configuration
+    "bctb.mcp.preferGlobal": false, // Use bundled MCP from packages/extension/mcp during development
     // BC Telemetry Buddy - Test Configuration
     // ⚠️ DISABLED in development workspace to prevent auto-activation
     // Use F5 to debug the extension instead
