fix: add --forceExit flag to MCP tests to prevent CI hanging

--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -18,8 +18,8 @@
         "compile": "tsc --noEmit",
         "start": "node dist/server.js",
         "pretest": "node scripts/generate-version.js",
-        "test": "jest",
-        "test:coverage": "jest --coverage",
+        "test": "jest --forceExit",
+        "test:coverage": "jest --coverage --forceExit",
         "test:watch": "jest --watch",
         "clean": "rimraf dist"
     },
