feat: mandatory field sampling and rename chatmodes to agents
- Added MANDATORY get_event_field_samples requirement before query creation
  to prevent incorrect datatype assumptions (especially timespans vs milliseconds)
- Renamed 'chatmodes' to 'agents' throughout codebase for clearer terminology:
  - chatmodeDefinitions.ts → agentDefinitions.ts
  - ChatmodeDefinition → AgentDefinition
  - CHATMODE_DEFINITIONS → AGENT_DEFINITIONS
  - .github/chatmodes/ → .github/agents/
  - .chatmode.md → .agent.md
  - bctb.installChatmodes → bctb.installAgents
- Updated all documentation references
- All 527 tests passing (193 MCP + 334 Extension)

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -89,8 +89,8 @@
                 "title": "BC Telemetry Buddy: Show Cache Statistics"
             },
             {
-                "command": "bctb.installChatmodes",
-                "title": "BC Telemetry Buddy: Install Chatmodes"
+                "command": "bctb.installAgents",
+                "title": "BC Telemetry Buddy: Install Agents"
             },
             {
                 "command": "bctb.switchProfile",
